Added - ref update

--- a/src/components/page-layout/page-layout.html
+++ b/src/components/page-layout/page-layout.html
@@ -29,7 +29,7 @@
             <img class="style--icon style--normal" :src="require('@/assets/images/Icon_menu_reference.svg')" alt="">
             <img class="style--icon style--active" :src="require('@/assets/images/Icon_menu_reference-active.svg')" alt="">
             </div>
-            <span class="menu-txt">Reference</span>
+            <span class="menu-txt">References</span>
             <div class="bg-hover"></div>
           </a-menu-item>
         </a-menu>
