--- a/src/components/page-ref/page-ref.html
+++ b/src/components/page-ref/page-ref.html
@@ -1,7 +1,7 @@
 
 <section class="page-ref">
   <h2 class="title-block">
-    Reference
+    References
   </h2>
   <div class="detail-block">
     <div class="card-text-block">
