--- a/src/components/page-main/page-main.html
+++ b/src/components/page-main/page-main.html
@@ -22,7 +22,7 @@
   <!-- timeline -->
   <div class="switch-block">
     <ul class="select-switch-block">
-      <li :class="[{'active': state.mode === 0}]" class="first" @click="onChange(0)" >Moonquakes Epicenter</li>
+      <li :class="[{'active': state.mode === 0}]" class="first" @click="onChange(0)" >Moonquake Epicenters</li>
       <li :class="[{'active': state.mode === 1}]" class="last"  @click="onChange(1)">Apollo Seismometers</li>
     </ul>
   </div>
