--- a/src/components/ui-time-slider/ui-time-slider.html
+++ b/src/components/ui-time-slider/ui-time-slider.html
@@ -10,5 +10,8 @@
     <div class="start-block style--start">{{maxT}}</div>
     <div class="start-block style--end">{{maxE}}</div>
   </div>
+  <!-- <ul class="label-block" v-for="">
+    <li></li>
+  </ul> -->
 </div>
 
