--- a/src/components/page-main/page-main.css
+++ b/src/components/page-main/page-main.css
@@ -68,26 +68,29 @@
   left: 10px;
   z-index: 9;
   top:50px;
-  max-width: 300px;
-  min-height: 120px;
-  color: white;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-  background-image: linear-gradient(to bottom, rgb(0, 96, 255,0.75), rgb(0, 96, 255,0.2));
-  border: 2px solid #0060FF;
-  border-radius: 5px;
-  margin-top: 0;
-  margin-left: 20px;
-  overflow: hidden;
-  padding-bottom: 40px;
+  
 
 }
 .eventMode .info{
+  border: 2px solid #0060FF;
   margin-top: 50px;
   display: inline-block;
   top: 0px;
   padding-left: 10px;
   padding-right: 10px;
   box-sizing: border-box;
+  max-width: 300px;
+  min-height: 120px;
+  color: white;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  background-image: linear-gradient(to bottom, rgb(0, 96, 255,0.75), rgb(0, 96, 255,0.2));
+  
+  border-radius: 5px;
+  margin-top: 0;
+  margin-left: 20px;
+  overflow: hidden;
+  padding-bottom: 40px;
+  padding-top: 40px;
 }
 #info{
     position: absolute;
